@@ -4,12 +4,36 @@ INCLUDE(ManageFile)
 
 FUNCTION(FIND_PROGRAM_ERROR_HANDLING_TEST expected)
     MESSAGE("FIND_PROGRAM_ERROR_HANDLING: ${expected}")
-    SET(v "")
-    FIND_PROGRAM_ERROR_HANDLING(v FIND_ARGS ${ARGN})
-    TEST_STR_MATCH(v "${expected}")
+    FIND_PROGRAM_ERROR_HANDLING(v ${ARGN})
+    IF(expected STREQUAL "")
+	IF(NOT v STREQUAL "v-NOTFOUND")
+	    MESSAGE(SEND_ERROR "v=|${v}| instead of v-NOTFOUND")
+	ENDIF(NOT v STREQUAL "v-NOTFOUND")
+    ELSE(expected STREQUAL "")
+	TEST_STR_MATCH(v "${expected}")
+    ENDIF(expected STREQUAL "")
 ENDFUNCTION(FIND_PROGRAM_ERROR_HANDLING_TEST expected)
-FIND_PROGRAM_ERROR_HANDLING_TEST("/usr/bin/cmake" cmake)
-FIND_PROGRAM_ERROR_HANDLING_TEST("/usr/bin/rpmbuild" NAMES rpmbuild rpmbuild-md5)
+FIND_PROGRAM_ERROR_HANDLING_TEST("/usr/bin/cmake" FIND_ARGS cmake)
+FIND_PROGRAM_ERROR_HANDLING_TEST("/usr/bin/rpmbuild" FIND_ARGS NAMES rpmbuild rpmbuild-md5)
+FIND_PROGRAM_ERROR_HANDLING_TEST("" VERBOSE_LEVEL ${M_OFF} FIND_ARGS "k-not-exist" )
+
+FUNCTION(FIND_FILE_ERROR_HANDLING_TEST expected)
+    MESSAGE("FIND_FILE_ERROR_HANDLING: ${expected}")
+    FIND_FILE_ERROR_HANDLING(v ${ARGN})
+    IF(expected STREQUAL "")
+	IF(NOT v STREQUAL "v-NOTFOUND")
+	    MESSAGE(SEND_ERROR "v=|${v}| instead of v-NOTFOUND")
+	ENDIF(NOT v STREQUAL "v-NOTFOUND")
+    ELSE(expected STREQUAL "")
+	TEST_STR_MATCH(v "${expected}")
+    ENDIF(expected STREQUAL "")
+ENDFUNCTION(FIND_FILE_ERROR_HANDLING_TEST expected)
+FIND_FILE_ERROR_HANDLING_TEST("/etc/passwd" FIND_ARGS passwd
+    PATHS /etc  NO_DEFAULT_PATH)
+FIND_FILE_ERROR_HANDLING_TEST("/etc/fstab" FIND_ARGS NAMES fstab
+    PATHS /etc  NO_DEFAULT_PATH)
+FIND_FILE_ERROR_HANDLING_TEST("" VERBOSE_LEVEL ${M_OFF} 
+    FIND_ARGS "k-not-exist" PATHS "/etc" NO_DEFAULT_PATH)
 
 FUNCTION(GIT_GLOB_TO_CMAKE_REGEX_TEST expected input)
     MESSAGE("GIT_GLOB_TO_CMAKE_REGEX: ${input}")
